--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,11 +22,12 @@ dependencies:
   intl: ">=0.15.2 < 0.18.0"
   logging: ^1.0.2
   meta: ^1.1.1
+  cupertino_icons: ^1.0.8
 
 
 dev_dependencies:
   mockito: ^5.0.0
-  build_runner: ^1.11.0
+  build_runner: ^2.4.15
   flutter_test:
     sdk: flutter
   test: ^1.3.0
